[package]
authors = ["ZeroTier, Inc. <contact@zerotier.com>"]
edition = "2021"
license = "MPL-2.0"
name = "zerotier-common-utils"
version = "0.1.0"

[features]

[dependencies]
base64 = "^0"
serde = { version = "^1", features = ["derive"], default-features = false }
zeroize = { version = "1.6.0", features = ["zeroize_derive"], default-features = false }

[dev-dependencies]
rand = "*"

[target."cfg(windows)".dependencies]
winapi = { version = "^0", features = ["handleapi", "ws2ipdef", "ws2tcpip"] }

[target."cfg(not(windows))".dependencies]
libc = "^0"
signal-hook = "^0"
